--- a/_posts/elasticsearch/2022-05-09-SSPL 라이센스.markdown
+++ b/_posts/elasticsearch/2022-05-09-SSPL 라이센스.markdown
@@ -1,14 +1,23 @@
-elastic 의 변경된 라이센스에 대해 아직 계속 질문하시는 분들이 있어 다시 한번 정리 합니다.
+---
+layout: post
+title:  "Elasticsearch License"
+categories: Elasticsearch
+---
+
 Gold, Platinum
-- 유료 기능. Elastic 에게 구매 후 사용 가능.
+- 유료 기능. Elastic 에서 구매 후 사용 가능.
+ 
 Basic
 - 허용 : 무료로 사용 가능. 사용에 제한 없음.
 - 제한 : 코드를 임의로 수정하거나 다른 제품에 포함, 재판매.
+
 Apache (7.10 이전)
 - 무료로 사용 가능. 코드 수정, 재배포 가능
+
 SSPL (7.11 이후)
 - 일반 사용은 Apache 와 동일.
 - 제한: Elasticsearch, Kibana 를 Cloud 에서 Management Service 로 제공하는 것.
+
 예를 들어, SSPL 기능으로 데이터를 시각화하거나, 사용한 결과물을 사용자에게 제공하는 것은 문제 없습니다.
 사용자가 elasticsearch, kibana 클러스터를 배포해서 직접 사용할 수 있는 managed service 를 만들려면 제한이 있습니다. (서비스 시스템의 코드를 공개해야 합니다)
 클라우드 서비스 직접 제공하는 회사가 아니라면 SSPL에 대해 크게 걱정하실 필요는 없습니다.
